<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pick_the_date" />
    
     <Button android:id="@+id/pickDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />
     
    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_usage" />

    <RadioGroup
        android:id="@+id/usageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gas" />

        <RadioButton
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Power" />

        <RadioButton
            android:id="@+id/water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Water" />
    </RadioGroup>

    <TextView
        android:id="@+id/evalue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usage" />

    <EditText
        android:id="@+id/evalue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:inputType="number|numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/savebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/Save" 
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>